--- a/src/report/Report_muc5a_finemapping.Rmd
+++ b/src/report/Report_muc5a_finemapping.Rmd
@@ -25,6 +25,8 @@ library(reticulate)
 Using PolyFun+SuSie to fine-map the MUC5AC region in Shrine et al. moderate-severe asthma and GBMI asthma summary statistics; compare them to each other and the chronic sputum.
 <br>
 Polyfun is a software that allows the use of prior probabilities as per-SNP heritability calculated based on multiple functional annotations/measures. 
+<br>
+The posterior probability is calculated using the SNP's marginal effect size (from the GWAS analysis) together with the prior (https://github.com/omerwe/polyfun/issues/131).
 ##Data
 Bayesian fine-mapping was conducted as part of the chronic sputum paper (supplementary table 10).
 <br>
@@ -53,7 +55,12 @@ Code: /home/n/nnp5/PhD/PhD_project/muc5a_finemapping/src/gbmi_b37.R
 Code: /home/n/nnp5/PhD/PhD_project/muc5a_finemapping/src/compare_credset.R
 ```{r, code = readLines('/home/n/nnp5/PhD/PhD_project/muc5a_finemapping/src/compare_credset.R'), eval=FALSE}
 ```
-
+Code: /home/n/nnp5/PhD/PhD_project/muc5a_finemapping/src/test_polyfun_susie.sh
+```{r, code = readLines('/home/n/nnp5/PhD/PhD_project/muc5a_finemapping/src/test_polyfun_susie.sh'), eval=FALSE}
+```
+Code: /home/n/nnp5/PhD/PhD_project/muc5a_finemapping/src/compare_different_params.R
+```{r, code = readLines('/home/n/nnp5/PhD/PhD_project/muc5a_finemapping/src/compare_different_params.R'), eval=FALSE}
+```
 
 Fine-mapping of the MUC5AC regions +/- 500Kb from the sentinel variant: rs11603634 for European moderate-to-severe, rs11245964 for European GBMI all-comer asthma.
 <br>
@@ -62,7 +69,7 @@ For GBMI, the sample size differs for SNP. I am still trying to figuring it out 
 # Results
 A total of 3690 variants were examined for the moderate-to-severe fine-mapping and 34 were identified in 95% credible set.
 <br>
-Regarding GBMI, 3781 variants were investigated and 11 variants were identified for the 95% credible set.
+Regarding GBMI, 3,781 variants were investigated and 11 variants were identified for the 95% credible set.
 <br>
 ```{r, echo = FALSE}
 df <- read.table('/home/n/nnp5/PhD/PhD_project/muc5a_finemapping/output/credset_3_gwas.txt')
@@ -73,19 +80,39 @@ DT::datatable(df, height = 200, options = list(scrollX = TRUE, scrollY = FALSE))
 <br>
 Comparing the credible set, 6 variants were shared across all the three credible sets; 21 variants were shared among the chronic sputum and the moderate-to-severe; 3, 7, and 5 variants were private respectively to chronic sputum, moderate-to-severe, and GBMI (Figure 1).
 <br>
-```{r, out.width='50%', out.height='50%', fig.align='center', fig.cap='Figure 1. Venn diagram of the three 95% credible sets.', echo = FALSE}
+```{r, out.width='80%', out.height='80%', fig.align='center', fig.cap='Figure 1. Venn diagram of the three 95% credible sets.', echo = FALSE}
 knitr::include_graphics('/home/n/nnp5/PhD/PhD_project/muc5a_finemapping/output/Venn_asthma_credset.png')
 ```
 
+# Notes
+I used the pre-computed prior SNP probabilities calculated by polyfun's authors. In doing so, I lost 441 and 389 variants in the fine-mapping for moderate-to-severe and GBMI study respectively, among which two variants that were found in the chronic sputum credible set (10.67% and 9.33% missing variants).
+<br>
+To notice as well, polyfun's author pointed out that results from meta-analysis may not be reliable (Table 3 in the main paper [1]) (https://github.com/omerwe/polyfun/issues/161).
+<br>
+In addition, I tried to use different parameters for minimum info score and maximum number of causal variants: info score 0.90, and 1 causal variant.
+<br>
+For moderate-to-severe, all the variants are shared except for two (Figure 2):
+```{r, out.width='100%', out.height='100%', fig.align='center', fig.cap='Figure 2. Venn diagram of the credible sets for different parameters for moderate-to-severe.', echo = FALSE}
+knitr::include_graphics('/home/n/nnp5/PhD/PhD_project/muc5a_finemapping/output/Venn_asthma_credset_modsev_params.png')
+```
+<br>
+For GBMI all-comer asthma, having a different type of maximum causal variants influenced which variants are in the credible set (Figure 3 and 4):
+```{r, out.width='100%', out.height='100%', fig.align='center', fig.cap='Figure 3. Venn diagram of the credible sets for different parameters for GBMI, with N = median sample size.', echo = FALSE}
+knitr::include_graphics('/home/n/nnp5/PhD/PhD_project/muc5a_finemapping/output/Venn_asthma_credset_gbmi_Nmedian_params.png')
+```
+<br>
+```{r, out.width='100%', out.height='100%', fig.align='center', fig.cap='Figure 4. Venn diagram of the credible sets for different parameters for GBMI, with N = minimum sample size.', echo = FALSE}
+knitr::include_graphics('/home/n/nnp5/PhD/PhD_project/muc5a_finemapping/output/Venn_asthma_credset_gbmi_Nmin_params.png')
+```
 
 # Conclusion
-A total of 42 variants were identified in the credibel sets among the three studies; ~64% showed were found by at least two studies.  
+A different minimum threshold for info score did not influence the causal variants in a consistent way. Althouugh, a different numbe of maximum causal variant showed visible differences in terms of variants in the credible set for GBMI analysis. As well, fine-mapping from meta-analysis may result in less reliable data, as per polyfun's author.
+<br>
+When using info score 0.85, and 10 possible causal variants, a total of 42 variants were identified in the credible sets among the three studies where ~64% showed were found by at least two studies.  
 
-# Notes
-I used the pre-computed prior SNP probabilities calcualted by polyfun's authors. In doing so, I lost 441 and 389 variants in the fine-mapping for moderate-to-severe and GBMI study respectively, among which two variants that were found in the chronic sputum credible set (10.67% and 9.33% missing variants).
 
 # References
-Weissbrod 0. et al, Functionally informed fine-mapping and polygenic localization of complex trait heritability. Nat Genet 2020,doi:https://doi.org/10.1038/s41588-020-00735-5
+1.Weissbrod 0. et al, Functionally informed fine-mapping and polygenic localization of complex trait heritability. Nat Genet 2020,doi:https://doi.org/10.1038/s41588-020-00735-5
 <br>
 https://github.com/omerwe/polyfun
 
